--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -21,10 +21,10 @@
       <img src="assets/img/menu/classement.svg" alt="classement" />
       <h2>Classement</h2>
     </a>
-    <a routerLink="/parametres" class="link">
+    <!-- <a routerLink="/parametres" class="link">
       <img src="assets/img/menu/param.svg" alt="paramètres" />
       <h2>Paramètres</h2>
-    </a>
+    </a> -->
   </div>
 
   <a routerLink="/login" (click)="logout()" class="link">
