--- a/src/app/home/main/games/games.component.html
+++ b/src/app/home/main/games/games.component.html
@@ -5,8 +5,7 @@
         <img src="assets/img/fist.svg" alt="" />
         <div class="card-info">
           <h2>Shifumi</h2>
-          <p>Level 3</p>
-          <p>Score : 120 pts</p>
+          <p>Score : {{infoUser.pointsShifumi}} pts</p>
           <!-- <div class="progress"></div> -->
         </div>
         <!-- <h2 class="percentage">60%</h2> -->
@@ -15,8 +14,8 @@
         <img src="assets/img/dice.svg" alt="" />
         <div class="card-info">
           <h2>Dés</h2>
-          <p>Level 1</p>
-          <div class="progress"></div>
+          <p>Score : {{infoUser.pointsDes}} pts</p>
+          <!-- <div class="progress"></div> -->
         </div>
       </a>
     </div>
