--- a/src/app/questions/questions.component.css
+++ b/src/app/questions/questions.component.css
@@ -68,7 +68,7 @@
   cursor: pointer;
   }
 
-.start-btn {
+.btn-start{
   font-size: 1.5rem;
   font-weight: bold;
   padding: 10px 20px;
@@ -100,4 +100,14 @@ h2 {
 .btn-grid p {
   text-align: center;
   font-size: 1em;
+}
+
+.result-container {
+  text-align: center;
+}
+
+.btn-end {
+  margin-top: 2em;
+  font-size: 1rem;
+  padding: 5px 10px;
 }
